Update start-servers.sh